--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -15,7 +15,8 @@
     @include flexbox.flexbox(between, start);
     flex: 1;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
+    overflow: hidden;
   }
 
   .layoutOutlet {
@@ -23,15 +24,16 @@
     flex: 1;
     flex-direction: column;
     width: 100%;
+    overflow: auto;
 
     .dashboardHeader {
+      height: 3rem;
       padding: 0 1rem;
-      margin: 1rem 0;
 
       h1 {
-        width: 100%;
         font-size: 1.5rem;
         font-weight: 500;
+        line-height: 3rem;
         color: colors.$DARK;
       }
     }
